# document_color_distribution

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: processing.py
